# PEG

./: .coverage  .env.sample  .gitignore  BUILD_COMPLETION_SUMMARY.md  CLAUDE.md  Dockerfile  GIT_COMMIT_MESSAGE.txt  IMPLEMENTATION_SUMMARY.md  Journal.json  Knowledge.json  Logbook.json  PHASE_8_KICKOFF.md  PromptEngineer.txt  PromptModules.json  PromptScoreModel.json  README.md  SYNC_TEST_20251127.txt  SessionConfig.json  TagEnum.json  Tasks.json  Tests.json  WorkflowGraph.json  audit.jsonl  bandit_weights.json  docker-compose.yml  inventory_cli.py  pyproject.toml  requirements.txt  requirements.txt.backup  run_scoring.py  server_audit.txt  validate_repo.py
.github/: dashboard-config.json  performance-baseline.json  quality-thresholds.json
archived_configs/: SessionConfig_Old_4.30.json
docs/: APEG_DEPLOYMENT_PI.md  APEG_DOC_UPDATE_SUMMARY.md  APEG_HYBRID_ORCHESTRATOR_BUILD.md  APEG_MCP_INTEGRATION.md  APEG_OPERATIONS_RUNBOOK.md  APEG_PHASE_9_REQUIREMENTS.md  APEG_PLACEHOLDERS.md  APEG_REQUIREMENTS_SUMMARY.md  APEG_RUNTIME_STATUS.md  APEG_STATUS.md  APEG_TODO.md  APEG_http_inventory_api.md  APEG_inventory_commands.json  CI_ENHANCEMENT_PLAN.md  CODE_DOCS_REVIEW_AND_CLEANUP_PLAN.md  DEPLOYMENT.md  ENTERPRISE_LAUNCH.md  Next_Steps.md  OPENAI_AGENTS_INTEGRATION.md  OPENAI_SDK_INTEGRATION.md  PHASE_9_VERIFICATION_REPORT.md  README.md  SECURITY_HARDENING.md  claude.md  inventory_translator.md
plugins/: etsy_plugin.py
schemas/: knowledge.schema.json
scripts/: deploy_raspberry_pi.sh  migrate_knowledge.py  run_shopify_nl_agent.py  test_inventory_command.py
src/: bandit_selector.py  knowledge_update.py  loop_guard.py  orchestrator.py  sandbox_executor.py
tests/: test_apeg_orchestrator.py  test_arsenal.py  test_bandit_selector.py  test_bandit_self_learning.py  test_base_agent.py  test_decision_bandit.py  test_decision_loop_guard.py  test_enhanced_scoring.py  test_etsy_agent.py  test_etsy_auth.py  test_evaluator.py  test_http_tools.py  test_hybrid_orchestrator.py  test_inventory_translator.py  test_llm_package.py  test_llm_roles.py  test_logbook_adapter.py  test_loop_guard.py  test_mcp_client.py  test_mcp_integration.py  test_mcts_planner.py  test_memory_store.py  test_meta_agent.py  test_monitoring.py  test_openai_agents_adapter.py  test_openai_client.py  test_plugin_manager.py  test_prompts.json  test_sdk_integration.py  test_security.py  test_shopify_agent.py  test_validator_agent.py  test_versioning.py  (+1 more)
(+94 files in other folders)
